important align fix on NAVBAR and some visual improvement journey start features added

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap");
 
+:root {
+  --main-box-bg: #ffffff;
+  --slogan-font-size: 22px;
+  --slogan-font-weight: 600;
+  --desc-font-size: 26px;
+  --desc-font-weight: 500;
+}
+
 .App {
   text-align: center;
   font-family: "Roboto", sans-serif;
-  background-color: rgb(255, 255, 255);
+  background-color: #FBFBFD;
 }
 
 .main-iphone13pro {
+  background-color: var(--main-box-bg);
   background-image: url(../images/iphone_13_pro.png);
   background-position: bottom;
   background-repeat: no-repeat;
@@ -19,28 +28,28 @@
 .main-iphone13pro img {
   width: 300px;
   margin: auto;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
 }
 
 .main-page-slogan {
-  font-size: 28px;
-  font-weight: 500;
+  font-size: var(--slogan-font-size);
+  font-weight: var(--slogan-font-weight);
 }
 
 .main-page-desc {
   max-width: 60%;
   margin: auto;
-  font-size: 20px;
-  font-weight: 400;
+  font-size: var(--desc-font-size);
+  font-weight: var(--desc-font-weight);
   padding-bottom: 20px;
-  padding-top: 10px;
+  padding-top: 1em;
 }
 
 .main-blue-button {
   margin: auto;
   background-color: #0071e3;
-  width: 200px;
-  height: 40px;
+  width: 170px;
+  height: 30px;
   border-radius: 50px;
   align-items: center;
 }
@@ -48,9 +57,11 @@
 .main-blue-button span {
   color: #fff;
   font-weight: 500;
-  font-size: 18px;
-  line-height: 40px;
+  font-size: 16px;
+  line-height: 30px;
 }
+
+/* iPhone SE */
 
 .main-iphonese {
   background-color: rgba(250, 250, 250, 255);
@@ -59,15 +70,16 @@
   background-repeat: no-repeat;
   background-size: 50em;
   width: auto;
-  height: 40em;
+  height: 35em;
   padding-top: 7em;
 }
 
 .main-iphonese img {
   width: 230px;
   margin: auto;
-  padding-bottom: 15px;
 }
+
+/* MacBook Pro */
 
 .main-macbookpro {
   background-color: #fff;
@@ -84,15 +96,18 @@
 .main-macbookpro img {
   width: 280px;
   margin: auto;
-  padding-bottom: 15px;
+  padding-top: 5em;
+  padding-bottom: 5px;
 }
 
+/* iPad */
+
 .main-ipad {
-  background-color: #fff;
-  background-image: url(../images/180f1315.png);
-  background-position: center;
+  background-color: #000;
+  background-image: url(../images/ipad-main-page.png);
+  background-position: bottom;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 43em;
   width: auto;
   height: 30em;
   padding-top: 5em;
@@ -121,16 +136,16 @@
 
 .main-page-slogan-ipad {
   color: #fff;
-  font-size: 28px;
-  font-weight: 500;
+  font-size: var(--slogan-font-size);
+  font-weight: var(--slogan-font-weight);
 }
 
 .main-page-desc-ipad {
   color: #fff;
   max-width: 60%;
   margin: auto;
-  font-size: 20px;
-  font-weight: 400;
+  font-size: var(--desc-font-size);
+  font-weight: var(--desc-font-weight); 
   padding-bottom: 20px;
   padding-top: 10px;
 }
