--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 8em;
+  height: 10em;
   background-color: #cccccc;
   position: relative;
 }
@@ -24,7 +24,7 @@
 }
 
 .more {
-  margin: auto;
+  margin: auto auto 20px auto;
   display: block;
   width: 80%;
 }
